--- a/mariokart_site/index.html
+++ b/mariokart_site/index.html
@@ -27,7 +27,10 @@
 </head>
 
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5Q8DJSDT"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<div id="container">
 		<!-- Header, to change see header.html  -->
 		<div id="header"></div>
