--- a/mariokart_site/Thank_You.html
+++ b/mariokart_site/Thank_You.html
@@ -27,6 +27,10 @@
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5Q8DJSDT"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- To Add Google Tag Scripts, Go to scripts.html -->
 	<div id="scripts"></div>
 	<div id="container">
